made the caracter control better, added traps, added goals

--- a/Game_3/Game_3/Game_3.csproj
+++ b/Game_3/Game_3/Game_3.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="box.cs" />
     <Compile Include="Ground.cs" />
+    <Compile Include="Hline.cs" />
     <Compile Include="MainGame.cs">
       <SubType>Form</SubType>
     </Compile>
